# rust-crate-template

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
src/: lib.rs
